receptionist GUI delete function done